# vchat

./: .env.example  .gitignore  Caddyfile  DOCS.md  Dockerfile.web  README.md  deploy.sh  docker-compose.yml  package.json  pnpm-lock.yaml  turnserver.conf  turnserver.conf.template
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: package.json
apps/web/src/: app.css  app.html
apps/web/src/lib/media/: audio-analysis.ts  manager.ts
apps/web/src/lib/signaling/: client.ts
apps/web/src/lib/stores/: room.ts
apps/web/src/lib/webrtc/: data-channel.ts  file-transfer.ts  mesh.ts
apps/web/src/routes/: +layout.ts  +page.svelte
apps/web/src/routes/room/[id]/: +page.svelte  AdmissionPanel.svelte  ChatPanel.svelte  DeviceSettings.svelte  ReactionOverlay.svelte  ReactionPicker.svelte  VideoTile.svelte  WaitingScreen.svelte
