[package]
name = "vchat"
version = "0.1.0"
description = "P2P encrypted video chat"
authors = []
edition = "2021"

[lib]
name = "vchat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
